@@ -6,6 +6,7 @@ pts-core: Add client side plumbing for estimated test install time from OpenBenc
 pts-core: Add estimate-install-time sub-command, show estimated install time when installing a test
 pts-core: Improve web browser selection logic for result viewer
 pts-core: Add search field to the result viewer areas for limiting based on title/argument matching
+phodevi: Fix for incorrect monitor count when parsing X.Org log
 phodevi: Warning fixes for latest WSL
 
 Phoronix Test Suite 9.8.0 Milestone 1
